# SB-Dioxus-Workshop

./: .gitignore  Cargo.toml  Shuttle.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health_check.rs  lib.rs
api/lib/src/film_repository/: mod.rs  pg_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  Dioxus.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: button.rs  film_card.rs  film_modal.rs  footer.rs  header.rs  mod.rs
front/src/models/: button.rs  film.rs  mod.rs
shared/: Cargo.toml
shared/src/: models.rs
static/: index.html  tailwind.css
static/assets/dioxus/: rusty-films.js  rusty-films_bg.wasm
static/assets/dioxus/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
